src/objects/SubmissionScore__c.object
<CustomObject>
    <fields>
        <fullName>ScoringGroup__c</fullName>
        <label>Scoring Group</label>
        <referenceTo>ScoringGroup__c</referenceTo>
        <relationshipLabel>Submission Score</relationshipLabel>
        <relationshipName>SubmissionScore</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Submission Score</relationshipLabel>
        <relationshipName>SubmissionScore</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <label>Total Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Submission Score</label>
    <nameField>
        <label>Submission Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>